# battleship

./: .dockerignore  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  start_uvi.sh  test.py
logic/: acceptor.py  engine.py  excecptions.py  fire.py  players.py  turn_controller.py
models/: board.py  players.py  ship.py  turn.py
src/: __main__.py
src/exceptions/: __init__.py  already_hit_error.py  base.py  excecptions.py  input_error.py  ship_allocation_error.py
src/logic/: acceptor.py  desktop_engine.py  engine.py  fire.py  fire_visitor.py  game_engine.py  logger.py  turn_controller.py  web_engine.py
src/models/: __init__.py  board.py  cell_state.py  common.py  player.py  players.py  point.py  ship.py  turn.py  turn_result.py
src/view/: input_provider.py  view_provider.py
src/view/console/: input_provider.py  view_provider.py
src/view/input_providers/: console_input_provider.py  hunter_input_provider.py  input_provider.py  random_input_provider.py  web_input_provider.py
src/view/models/: dto.py  transfer_objects.py
src/view/output_providers/: console_view_provider.py  view_provider.py
tests/models/: board_tests.py
tests/view/: test_hunter_input_provider.py
view/: input_provider.py  view_provider.py
web/api/: game_router.py  main.py  socket_api.py
web/api/routers/: __init__.py  game_router.py
web/ui/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/ui/src/: App.vue  main.ts
web/ui/src/components/: GameBoard.vue
web/ui/src/logic/: models.ts
web/ui/src/services/: socketService.ts
(+3 files in other folders)
