[project]
name = "battleship"
version = "0.1.0"
description = "Battleship"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]
